# File_Explorer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  context_menu.rs  main.rs  models.rs  operations.rs  settings.rs  terminal.rs  terminal_ui.rs  ui.rs  utils.rs
