[package]
name = "fileexp"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27.2"
open = "5.0"
arboard = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
nix = "0.29"
pty-process = "0.4"
vte = "0.13"
dirs = "5.0"

